# squid-gps-desktop

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  install.iss
cmake/: add_asio.cmake  add_cxxopts.cmake  add_fmt.cmake  add_googletest.cmake  add_json.cmake  add_marnav.cmake  add_spdlog.cmake
cmake/patches/: marnav.patch
src/: CMakeLists.txt
src/sgps/: CMakeLists.txt  controller.cpp  controller.h  model.cpp  model.h  nmea_listener.cpp  nmea_listener.h  squid_gps_server.cpp  squid_gps_server.h
src/squid-gps-cli/: CMakeLists.txt  main.cpp
src/squid-gps-desktop/: CMakeLists.txt  Main.qml  SerialSettingsPopup.qml  backend.cpp  backend.h  input_receiver.cpp  input_receiver.h  inputs_manager.cpp  inputs_manager.h  main.cpp  main.qml  qtquickcontrols2.conf  serial_reader.cpp  serial_reader.h  serial_settings.cpp  serial_settings.h  udp_listener.cpp  udp_listener.h  usb.cpp  usb.h
test/: CMakeLists.txt
test/sgps/: CMakeLists.txt  frames.txt  sgps_test.cpp
